fixed z-index issue on mobile

--- a/res/global.css
+++ b/res/global.css
@@ -30,6 +30,7 @@
     nav {
         width: 100%;
         padding: 20px;
+        z-index: 1000;
     }
     
     .navbar ul {
@@ -66,7 +67,7 @@
         position: absolute;
         top: 20px;
         right: 20px;
-        z-index: 2;
+        z-index: 1100;
     }
     
     #hamburger div {
@@ -85,6 +86,7 @@
         #hamburger {
             display: block;
             transition: 1s ease;
+            z-index: 1100
         }
         .navbar {
             position: absolute;
@@ -95,6 +97,7 @@
             background-color: #f3f3ef;
             transform: translateY(-100%);
             transition: 0.5s;
+            z-index: 1050;
         }
         .navbar ul {
             width: 100%;
